--- a/README.textile
+++ b/README.textile
@@ -8,3 +8,4 @@ h2. package de.uni_koeln.spinfo.textengineering.ir
 table(#tableborders){ border: 2px solid #ccc; border-collapse: collapse; border-spacing: 0; width:100%;}.
 | *package* | *Inhalt* | *Ressourcen/Dependencies* | *Literatur* |
 | "basic":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/basic | Korpus, Lineare Suche | "Shakespeare":http://www.gutenberg.org/cache/epub/100/pg100.txt | |
+| "boole":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/boole | Term-Dokument-Matrix, Invertierter Index | | "IIR":http://www-nlp.stanford.edu/IR-book/ Kap. 1 |
