--- a/README.textile
+++ b/README.textile
@@ -9,3 +9,6 @@ table(#tableborders){ border: 2px solid #ccc; border-collapse: collapse; border-
 | *package* | *Inhalt* | *Ressourcen/Dependencies* | *Literatur* |
 | "basic":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/basic | Korpus, Lineare Suche | "Shakespeare":http://www.gutenberg.org/cache/epub/100/pg100.txt | |
 | "boole":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/boole | Term-Dokument-Matrix, Invertierter Index | | "IIR":http://www-nlp.stanford.edu/IR-book/ Kap. 1 |
+| "preprocess":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/preprocess | Vorverarbeitung | "snowball stemmer":http://snowball.tartarus.org/ | IIR Kap. 2 |
+| "tolerant":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/tolerant | Tolerant Retrieval | "Apache Commons Lang":https://commons.apache.org/proper/commons-lang/, "Apache Commons Codec":https://commons.apache.org/proper/commons-codec/ | IIR Kap. 3 |
+| "ranked":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/ranked | Ranked Retrieval: Termgewichtung, Vector Space Model | | IIR Kap. 6 + 7 |
