--- a/README.textile
+++ b/README.textile
@@ -12,3 +12,5 @@ table(#tableborders){ border: 2px solid #ccc; border-collapse: collapse; border-
 | "preprocess":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/preprocess | Vorverarbeitung | "snowball stemmer":http://snowball.tartarus.org/ | IIR Kap. 2 |
 | "tolerant":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/tolerant | Tolerant Retrieval | "Apache Commons Lang":https://commons.apache.org/proper/commons-lang/, "Apache Commons Codec":https://commons.apache.org/proper/commons-codec/ | IIR Kap. 3 |
 | "ranked":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/ranked | Ranked Retrieval: Termgewichtung, Vector Space Model | | IIR Kap. 6 + 7 |
+| "evaluation":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/eval | Evaluation: Precision, Recall, F-Maß | | IIR Kap. 8 |
+| "lucene":https://github.com/claesn/ir2017/tree/master/ir2017/src/main/java/de/uni_koeln/spinfo/textengineering/ir/lucene | Lucene: Indexer und Searcher | "lucene-core":https://lucene.apache.org/core/7_2_1/core/index.html, "lucene-queryparser":https://lucene.apache.org/core/7_2_1/queryparser/index.html, "lucene-analyzers-common":https://lucene.apache.org/core/7_2_1/analyzers-common/index.html | "Lucene in Action":http://www.manning.com/hatcher3/ |
